# claude-plugins

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/okto-pulse/.claude-plugin/: oktolabs-meta.json  plugin.json
plugins/okto-pulse/agents/: architect.md  ideation-analyst.md  implementer.md  kg-curator.md  qa-engineer.md  refinement-investigator.md  spec-writer.md  sprint-planner.md
plugins/okto-pulse/deploy/: docker-compose.yml
tests/: conftest.py  scenarios.py  test_atomic_state_write.py  test_docker_path_container_healthy.py  test_doctor_autofix_restart_serve.py  test_flow_routing.py  test_flow_tiebreaker.py  test_helper_exit_codes.py  test_kebab_case_ci.py  test_local_pip_serve_running.py  test_marketplace_autoupdate_off.py  test_marketplace_install.py  test_mcp_list_resolved_url.py  test_no_token_install.py  test_persona_import.py  test_plugin_validate.py  test_precompact_consolidates_kg.py  test_remote_path_validates.py  test_session_start_hook_dual_path.py  test_setup_one_prompt.py  test_state_persists_across_reinstall.py  test_stop_hook_blocks_only_on_failure.py  test_stress_cleanup.py  test_subagent_no_write.py  test_tagged_release_marketplace.py  test_task_completed_dual_path.py  test_version_consistency.py
tools/ci/: kebab_case_check.py  marketplace_lint.py  secret_scan.sh  smoke_install.sh  userconfig_completeness.py  validate_plugin.sh  version_consistency_check.py
tools/release/: build_tagged_marketplace.py
tools/state/: atomic_write.py
(+30 files in other folders)
