[project]
name = "oktolabs-claude-plugins-tests"
version = "0.0.0"
description = "Test scaffolds for the OktoLabs Claude Code plugin marketplace (R1.1)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OktoLabs", email = "dev@oktolabs.ai" }]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "packaging>=24.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/OktoLabsAI/claude-plugins"
PulseBoard = "https://github.com/OktoLabsAI/claude-plugins#sdlc-lineage"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "tools.state", "tools.ci", "tools.release"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
markers = [
    "scenario(id): Pulse test-scenario id (e.g. ts_xxxxxxxx)",
    "card(id): Pulse card uuid",
    "sprint(id): Pulse sprint uuid",
    "spec(id): Pulse spec uuid",
    "deploy_mode(mode): exercise a Pulse deploy mode (local-pip|docker|remote)",
]
